api: adds cluster bootstrap api
